IVYPORTAL-9262: Portal supports Firefox and Edge - Fixed bug: Statistic Carousel buttons are not aligned on Firefox - Fixed bug: Alignment create form in express on Edge

--- a/AxonIvyPortal/AxonIvyExpress/webContent/resources/css/portal_express.css
+++ b/AxonIvyPortal/AxonIvyExpress/webContent/resources/css/portal_express.css
@@ -767,3 +767,16 @@ body .task-template-content .ui-fieldset .ui-fieldset-legend {
   margin-left: 5px !important;
   width: calc(50% - 5px);
 }
+
+.form-definition-table tr:nth-child(2) td.ui-panelgrid-cell:last-child {
+  margin-left: 5px !important;
+  width: calc(50% - 5px);
+}
+
+/*Edge support*/
+@supports (-ms-ime-align: auto) {
+  .form-definition-table tr:nth-child(2) td.ui-panelgrid-cell:last-child {
+    margin-left: 0px !important;
+    width: 50%;
+  }
+}
